# nexus

./: CMakeLists.txt  OpticksEnv  README  build.sh  cleanbuild.sh  config.h.in  setup.sh  slurm_S1.sh  slurm_S2.sh  slurm_single_particle.sh
data/: Xenon_10Bar.gas  Xenon_5bar.gas
macros/: CRAB.config.mac  CRAB.init.mac  DEMOPP_fullKr.config.mac  NEXT100.config.mac  NEXT100.init.mac  vis.mac
macros/CRAB/: CRAB_Ba133_config.mac  CRAB_Ba133_init.mac  CRAB_CS137_init.mac  CRAB_Cs137_config.mac  CRAB_Pb210_config.mac  CRAB_Pb210_electrons_config.mac  CRAB_Pb210_electrons_init.mac  CRAB_Po210_init.mac  CRAB_SingleParticle_config.mac  CRAB_SingleParticle_init.mac  CRAB_Sr90_config.mac  CRAB_gamma_config.mac  CRAB_gamma_init.mac
macros/CRAB/Camera/: CRAB_Detector_Test_config.mac  CRAB_Detector_Test_init.mac  CRAB_Diffusion_Setup_config.mac  CRAB_Diffusion_Setup_init.mac  CRAB_EMCCD_Test_init.mac  CRAB_II_Test_config.mac  CRAB_II_Test_init.mac  Detector_config.mac
macros/CRAB/PMT_Light_Yield/: CRAB_IonGenerator_init.mac  CRAB_Kr83m_init.mac  CRAB_Pb210_config.mac  CRAB_Pb210_electrons_init.mac  CRAB_Pb210_init.mac  CRAB_SingleParticle_config.mac  CRAB_SingleParticle_init.mac  CRAB_gamma_init.mac
scripts/: .dat.npy  CRABSim.py  CrabAnalysisi.py  convertDegradFile.py
source/: CMakeLists.txt  nexus.cc
source/actions/: AnalysisSteppingAction.cc  CRABAnalysisSteppingAction.cc  CRABOpticalTrackingAction.cc  CRABOpticalTrackingAction.h  DefaultEventAction.cc  DefaultEventAction.h  DefaultRunAction.cc  DefaultRunAction.h  DefaultTrackingAction.cc  DefaultTrackingAction.h  GarfieldStackingAction.cc  OpticksSteppingAction.cc  OpticksSteppingAction.hh
source/actions/.Garfiled/: GarfieldEventAction.cc  GarfieldRunAction.cc  GarfieldStackingAction.h  GarfieldSteppingAction.cc  GarfieldSteppingAction.h  GarfieldTrackingAction.cc  GarfieldTrackingAction.h
source/actions/Garfield/: GarfieldEventAction.cc  GarfieldEventAction.h  GarfieldEventAction.hh  GarfieldOpticalTrackingAction.cc  GarfieldOpticalTrackingAction.h  GarfieldRunAction.cc  GarfieldRunAction.h  GarfieldStackingAction.cc  GarfieldStackingAction.h  GarfieldSteppingAction.cc  GarfieldSteppingAction.h  GarfieldSteppingAction.hh  GarfieldTrackingAction.cc  GarfieldTrackingAction.hh  MyUserActionInitialization.cc  MyUserActionInitialization.hh  OpticksSteppingAction.cc  OpticksSteppingAction.hh  PrimaryGeneratorAction.cc  PrimaryGeneratorAction.hh
source/base/: DetectorConstruction.cc  NexusApp.cc
source/generators/: CrabSourceGenerator.cc  CrabSourceGenerator.h
source/generators/Garfield/: GarfieldParticleGenerator.cc  GarfieldParticleGenerator.hh  PrimaryGenerator.cc  PrimaryGenerator.hh
source/geometries/: BlackBox.cc  CRAB.cc  CRAB.h  CRAB0.cc  CRAB0.h  CRABImageIntensifier.cc  CRABImageIntensifier.h  CRAB_Detector.cc  CRAB_Detector.h  CRAB_Diffusion_Setup.cc  CRAB_Diffusion_Setup.h  CRAB_EMCCD.cc  CRAB_EMCCD.h  CylindricChamber.cc  GRAB.h  Next100EnergyPlane.cc  Next100FieldCage.cc  Next100SiPM.cc  Next100SiPMBoard.cc  NextDemoFieldCage.cc  PmtR7378A.cc  XeSphere.cc
source/geometries/Garfield/: CRAB0.cc  CRAB0.h  GarfieldExcitationHit.cc  GasBoxSD.cc  GasBoxSD.h
source/materials/: MaterialsList.cc  MaterialsList.h  OpticalMaterialProperties.cc  OpticalMaterialProperties.h  XenonProperties.cc  XenonProperties.h
source/persistency/: HDF5Writer.cc  HDF5Writer.h  PersistencyManager.cc  PersistencyManager.h  hdf5_functions.cc  hdf5_functions.h
source/physics/: BaseDriftField.h  Electroluminescence.cc  UniformElectricDriftField.h
source/physics/Garfield/: DegradModel.cc  DegradModel.h  DegradModel.hh  DriftLineTrajectory.cc  DriftLineTrajectory.h  DriftLineTrajectoryPoint.cc  DriftLineTrajectoryPoint.h  GarfieldVUVPhotonModel.cc  GarfieldVUVPhotonModel.h  GasModelParameters.cc  GasModelParameters.h  GasModelParameters.hh  OpAbsorption.h  OpAbsorption.hh  OpBoundaryProcess.h  OpBoundaryProcess.hh  OpWLS.h  OpWLS.hh  PhysicsListMessenger.cc  S2Photon.cc  S2Photon.h
source/physics_lists/: NexusPhysics.cc  NexusPhysics.h
source/physics_lists/Garfield/: GarfieldPhysics.cc  GarfieldPhysics.h
source/sensdet/: IonizationHit.h  IonizationSD.h  SensorSD.cc
source/utils/: CADMesh.h  IOUtils.cc  IOUtils.h  PhysicsUtils.cc  PhysicsUtils.h  SampleFromSurface.cc  SampleFromSurface.h
source/utils/Garfield/: Analysis.h  Analysis.hh  FileHandling.cc  FileHandling.h  FileHandling.hh  GarfieldHelper.cc  GarfieldHelper.h  GasModelParametersMessenger.cc  GasModelParametersMessenger.h  HexagonMeshTools.cc  gasNESTdet.h  gasNESTdet.hh
